--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
-    "mariadb": "^3.2.3",
+    "mariadb": "^3.3.0",
+    "node-fetch": "^3.3.2",
     "pem": "^1.14.8",
     "sqlite3": "^5.1.7"
   },
